--- a/ModularMonolith.Api/ModularMonolith.Api.csproj
+++ b/ModularMonolith.Api/ModularMonolith.Api.csproj
@@ -12,12 +12,18 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\ModularMonolith.Modules.Companies\ModularMonolith.Modules.Companies.csproj" />
       <ProjectReference Include="..\ModularMonolith.Modules.Visits\ModularMonolith.Modules.Visits.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="logs\" />
+      <Folder Include="Middelware\" />
     </ItemGroup>
 
 </Project>
