--- a/ModularMonolith.Framework/ModularMonolith.Framework.csproj
+++ b/ModularMonolith.Framework/ModularMonolith.Framework.csproj
@@ -9,6 +9,7 @@
       <PackageReference Include="MediatR" Version="12.1.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
+      <PackageReference Include="Serilog" Version="3.0.1" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Database\Migrations\" />
