--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,10 @@ node_modules/
 
 # Rider
 /.idea
+global.json
+
+# Visual Studio
+/.vs
 
 # BenchmarkDotNet artifacts
 BenchmarkDotNet.Artifacts
